fixed distortion on slider in index

--- a/css/custom-styles.scss
+++ b/css/custom-styles.scss
@@ -1681,9 +1681,8 @@ footer{
 @media screen and (max-width: 768px) {
  
     .carousel-inner>.item>img{
-        height: 350px;
+        min-height: 350px;
         max-width: none;
-        margin-left: -50%;
     }
 }
 
